# tennis_tracker

./: .gitignore  README.md  pyproject.toml  setup.sh
tennis_tracker/article_visualizations/: plot_random_frame.py  point_video.py  visualize_keypoints.py
tennis_tracker/ball_tracking/: clean_labels_V010.json  clean_labels_V010_v2.json  label_with_balls.py  labels_V010.json  labels_V010_v3.json  run.sh  test.ipynb  track_trajectory.ipynb  tracking_with_kalman.py
tennis_tracker/download_data/: download_any_video.py  download_yt_videos.py  extract_frames.py  extract_keypoints.py  labels.json  labels_V010.json  labels_V010_v3.json  run.sh  serena_vid.txt  youtube_vids.txt
tennis_tracker/labels/: labels.json  labels_with_balls.json
tennis_tracker/player_kalman_tracking/: test.ipynb  visualize_with_kalman.py
tennis_tracker/player_location/: README.md  __init__.py  extract_keypoints.py  homography.py  padded_click_coordinates.txt  postprocess.py  test.ipynb  tracknet.py
tennis_tracker/player_tracking/: label_players.py
tennis_tracker/pseudo_label/: label_players.ipynb  labels_V010.json  labels_V010_v3.json  pseudo_label.py  run.sh
tennis_tracker/psudeo_label/: label_players.ipynb  pseudo_label.py
tennis_tracker/visualize/: add_local_path.py  clean_json.py  isolate_tennis_ball.ipynb  test.ipynb  visualize_ball_tracking.ipynb  visualize_ball_tracking.py  visualize_m.ipynb  visualize_player_tracking.py  visualize_video.py  visualize_with_kalman.py
