[tool.poetry]
name = "tennis-tracker"
version = "0.1.0"
description = ""
authors = ["dcaustin33 <dcaustin33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
scipy = "^1.14.1"
opencv-python = "^4.10.0.84"
torch = "2.3.1"
yt-dlp = "^2024.10.7"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
setuptools = "^75.2.0"
torchvision = "0.18.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
